<resources>
    <string name="app_name">Challenge MELI</string>
    <string name="not_found">No Result Founds</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="condition_state_new">New</string>
    <string name="condition_state_used">Used</string>
    <string name="warranty">WARRANTY</string>
    <string name="attributes">ATTRIBUTES</string>
    <string name="results">Results</string>
    <string name="search_text">Search text</string>
    <string name="description_app">Find the product you want</string>
    <string name="attribute_value">Attribute Value</string>
    <string name="product_title">Product title</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="location">Location</string>
    <string name="suggestion">Suggestion</string>
    <string name="search">Search</string>
    <string name="no_connection">There is not internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="we_are_working">We are working to solve it</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="product_not_found">Product not found</string>
</resources>