<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProductDetailActivity">

    <include layout="@layout/action_bar" />

<!--    Visible=gone -> Ocultando las vistas -->
<!--    Visible=visible -> Mostrar las vistas -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                app:iss_auto_cycle="true"
                app:iss_period="5000"
                app:iss_delay="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0$"
                android:textSize="20sp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/textViewCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condition_state_new"
                android:maxLines="1"
                android:textSize="15sp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warranty"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/textViewWarranty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warranty"
                android:maxLines="1"
                android:textSize="15sp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attributes"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAttributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="66dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center" />

    <!-- MOSTRAR QUE NO HAY CONEXION A INTERNET-->
    <include
        android:id="@+id/noConnectionLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"
        layout="@layout/no_connection_layout"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>