<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/gray_200"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/iphone"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                />


        </FrameLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_title"
                android:maxLines="2"
                android:textSize="15sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$ 000.000"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/textViewInstallments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="En 0x $ 00.000"
                android:maxLines="1"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/textViewFreeShipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_shipping"
                android:maxLines="1"
                android:textSize="11sp"
                android:textColor="@color/green"
                android:layout_marginTop="6dp"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_location"/>

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:maxLines="1"
                    android:textSize="11sp"
                    android:textColor="@color/gray_dark"

                    />

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>